// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorResponse: internal error 1`] = `
Object {
  "error": Object {
    "code": -32603,
    "data": Object {
      "stack": "",
      "type": "Error",
    },
    "message": "Internal errormsg",
  },
  "id": "id",
  "jsonrpc": "2.0",
}
`;

exports[`ErrorResponse: invalid code 1`] = `
Object {
  "error": Object {
    "code": -124,
    "data": Object {
      "stack": "stack",
      "type": "Object",
    },
    "message": "message",
  },
  "id": "id2",
  "jsonrpc": "2.0",
}
`;

exports[`ErrorResponse: invalid error object 1`] = `
Object {
  "error": Object {
    "code": 123,
    "data": Object {
      "stack": "stack",
      "type": "Error",
    },
    "message": "",
  },
  "id": "id",
  "jsonrpc": "2.0",
}
`;

exports[`ErrorResponse: invalid params 1`] = `
Object {
  "error": Object {
    "code": -32602,
    "data": Object {
      "stack": "",
      "type": "Error",
    },
    "message": "Invalid params",
  },
  "id": "id",
  "jsonrpc": "2.0",
}
`;

exports[`ErrorResponse: invalid req 1`] = `
Object {
  "error": Object {
    "code": -32600,
    "data": Object {
      "stack": "",
      "type": "Error",
    },
    "message": "Invalid Request",
  },
  "id": "id",
  "jsonrpc": "2.0",
}
`;

exports[`ErrorResponse: method not found 1`] = `
Object {
  "error": Object {
    "code": -32601,
    "data": Object {
      "stack": "",
      "type": "Error",
    },
    "message": "Method not found",
  },
  "id": "id",
  "jsonrpc": "2.0",
}
`;

exports[`ErrorResponse: normal error 1`] = `
Object {
  "error": Object {
    "code": -123,
    "data": Object {
      "stack": "stack",
      "type": "Error",
    },
    "message": "message",
  },
  "id": "id2",
  "jsonrpc": "2.0",
}
`;

exports[`ErrorResponse: parse error 1`] = `
Object {
  "error": Object {
    "code": -32700,
    "data": Object {
      "stack": "stack",
      "type": "Error",
    },
    "message": "Parse error",
  },
  "id": null,
  "jsonrpc": "2.0",
}
`;

exports[`Request: req1 1`] = `
Object {
  "id": "id",
  "jsonrpc": "2.0",
  "method": "method",
  "params": Array [
    "param1",
    "param2",
  ],
  "remoteStack": "stack",
}
`;

exports[`Request: req2 1`] = `
Object {
  "id": "id2",
  "jsonrpc": "2.0",
  "method": "method",
  "params": Object {
    "param1": "abc",
    "param2": "def",
  },
  "remoteStack": "stack",
}
`;

exports[`SuccessResponse: success 1`] = `
Object {
  "id": "id3",
  "jsonrpc": "2.0",
  "result": Object {
    "data": "result",
  },
}
`;

exports[`SuccessResponse: undefined-dropping 1`] = `
Object {
  "id": "id2",
  "jsonrpc": "2.0",
  "result": null,
  "resultIsUndefined": true,
}
`;

exports[`SuccessResponse: undefined-keeping 1`] = `
Object {
  "id": "id",
  "jsonrpc": "2.0",
  "result": null,
}
`;
